# ChangeLog for dev-util/nvidia-cuda-sdk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/nvidia-cuda-sdk/ChangeLog,v 1.10 2009/05/16 19:55:19 spock Exp $

  16 May 2009; Michał Januszewski <spock@gentoo.org>
  nvidia-cuda-sdk-2.1.1215.2015.ebuild, nvidia-cuda-sdk-2.2.ebuild,
  nvidia-cuda-sdk-2.02.0807.1535.ebuild:
  Ignore executable stacks in an upstream binary.

  16 May 2009; Michał Januszewski <spock@gentoo.org>
  nvidia-cuda-sdk-2.1.1215.2015.ebuild:
  Force serial make (bug #266069, comment #25).

*nvidia-cuda-sdk-2.2 (16 May 2009)

  16 May 2009; Michał Januszewski <spock@gentoo.org>
  +nvidia-cuda-sdk-2.2.ebuild:
  Version bump (bug #269893).

*nvidia-cuda-sdk-2.1.1215.2015 (16 May 2009)

  16 May 2009; Michał Januszewski <spock@gentoo.org>
  +nvidia-cuda-sdk-2.1.1215.2015.ebuild,
  -nvidia-cuda-sdk-2.10.1215.2015.ebuild:
  As NVIDIA changed the versioning scheme of their files, change the latest
  version of the package so that it is not identified as newer than 2.2.

  22 Mar 2009; Michał Januszewski <spock@gentoo.org>
  +files/nvidia-cuda-sdk-2.10.1215.2015-vararg_inline_fix.patch,
  nvidia-cuda-sdk-2.10.1215.2015.ebuild:
  Fix bug #260744 (compilation problems with GCC 4.3.3+).

*nvidia-cuda-sdk-2.10.1215.2015 (21 Jan 2009)

  21 Jan 2009; Michał Januszewski <spock@gentoo.org>
  +nvidia-cuda-sdk-2.10.1215.2015.ebuild:
  Version bump.

  13 Nov 2008; Michał Januszewski <spock@gentoo.org>
  nvidia-cuda-sdk-2.02.0807.1535.ebuild:
  Change the default CUDA path to /opt/cuda (bug #245621).

  29 Oct 2008; Michał Januszewski <spock@gentoo.org>
  nvidia-cuda-sdk-2.02.0807.1535.ebuild:
  Add missing dependency on GLUT (bug #244182).

  18 Oct 2008; Michał Januszewski <spock@gentoo.org>
  nvidia-cuda-sdk-2.02.0807.1535.ebuild:
  Fix the DESCRIPTION field in the ebuild. Remove a spurious RESTRICT.

*nvidia-cuda-sdk-2.02.0807.1535 (18 Oct 2008)

  18 Oct 2008; Michał Januszewski <spock@gentoo.org>