@@ -8,13 +8,14 @@ DIST cuda-sdk-linux-2.10.1215.2015-3233425.run 46618139 RMD160 bfbadee2b669d72e0
 DIST cudasdk_2.2_linux.run 55951278 RMD160 68c05b95b2a1f9230b9a076f1d9cf150d877d8b6 SHA1 72a6877c649a7444a853260d21387ed8a80b98c8 SHA256 1962a0a0795a8d2aef7c4e113319bd0bb376a7bb553405d94d731e594ef316fb
 EBUILD nvidia-cuda-sdk-2.02.0807.1535.ebuild 1426 RMD160 05421bccebe1a3cbcc65e1d5196837361fdf1f27 SHA1 4fa1553cb70c43547e032e1b0097a0c8c3104147 SHA256 48cd298a8e7c2a08b3254eac4eec2afa0d283406d1d977ae2bfdb2a6e1b0e898
 EBUILD nvidia-cuda-sdk-2.1.1215.2015.ebuild 1515 RMD160 ffe2768c2d41631eab707b66d864dcd931497bdf SHA1 b50f3ff6123b7965c77e89b085cd718422a8b9af SHA256 8a890e587a66382c39e35af7b9c83ac9bffbb1741969492e77af476a38a9ca66
+EBUILD nvidia-cuda-sdk-2.2-r1.ebuild 1577 RMD160 63500746da0a2c1a02b8664e0955231fb2bba2c8 SHA1 65e9efc29a94fb7916206173aee025aa769fa3ae SHA256 027523ca4cc8ea9422f1f81bf2aea3fca0e2bd917fcc44948c53450680eca325
 EBUILD nvidia-cuda-sdk-2.2.ebuild 1408 RMD160 172361d4a9610e79f66a58d62b9225f3da4ccdbf SHA1 77e8402b79f944e9088def8e451a960a5c5c995c SHA256 b36d74a665cc85c644f2b273e7ad4758f0382cb6ce96be02756785c2ccd77255
-MISC ChangeLog 2145 RMD160 d9db3f608fb386623452de1725558ef262718ead SHA1 da24db77108bd5d1d92a62992a66e4a0fef63818 SHA256 9b8cda05834bb7f19e0f5cc3b7f139005cb5e7f0694a0536b4e61e6eea6863b6
+MISC ChangeLog 2429 RMD160 02ebf2684a747b9aa36ece18b878a0212b568099 SHA1 bc0859db43006336c15af490c2bbb8ec6f73f6a8 SHA256 dae87a9653fdfa8c6f34e7bd9aff1e6833574f5194cc6118dd5b4b260d23e9fd
 MISC metadata.xml 419 RMD160 182c9ce57a04ae41c2cf85f6f9ec4536d661c759 SHA1 7a1a99d443b61ab8b6256c1f241b78e40c09faf3 SHA256 b690630cd28888964717a3c5aa733889b0dae3434559d1e3b66be8c09f7de912
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.12 (GNU/Linux)
 
-iEYEARECAAYFAkoPGhMACgkQchej4aZK9/fPkACfQ/ZnAII4OkcGUgWfktsyHXtb
-M0UAoIhWY/K8lnrSbwyp7k1QO35OrLYd
-=QHqn
+iEYEARECAAYFAkpOSrkACgkQchej4aZK9/cooACeJwGTRM+i/eLrXEfRlzT1/7eT
+9xAAoIVTGxcOP8KZBxLMLiHBvErTbh1N
+=1jsO
 -----END PGP SIGNATURE-----
